# KnowledgeBase

./: .gitignore  .prettierignore  Cargo.toml  FOLDER_REASSIGNMENT.md  README.md  build.sh  index.html  package-lock.json  package.json  reassign_folder.sh  start.sh  tailwind.config.js  vite.config.ts
.cursor/rules/: api-integration.mdc  button-component-system.mdc  component-architecture.mdc  css-modules-migration.mdc  database-management.mdc  design-system-tokens.mdc  development-workflow.mdc  prettier-formatting.mdc  production-deployment.mdc  project-structure.mdc  react-typescript-standards.mdc  rust-backend-standards.mdc  troubleshooting.mdc
backend/: Cargo.toml  knowledge_base.db_bckp
backend/src/: config.rs  corpus.rs  database.rs  lib.rs  main.rs  mcp.rs  ollama.rs  search.rs  server.rs
backend/tests/: database_versioning_tests.rs  docx_indexing_tests.rs  mcp_tools_tests.rs  project_management_tests.rs
cli/: Cargo.toml
cli/src/: main.rs
doc/: BRD_AI_Native_Project_Documentation_Workspace.md  CR_Historical_Versions.md  CR_Index_Tab_Folder_Management.md  CR_Project_Context_and_Management.md  CR_QA_Default_Page.md  EP01_Corpus_Management_and_Indexing.md  EP02_Search_and_Retrieval.md  EP03_Read_and_Preview.md  EP04_Summarization.md  EP05_Question_Answering_RAG.md  EP06_MCP_Tools_and_Contracts.md  EP07_Settings_Privacy_Telemetry.md  EP08_Client_Interfaces_CLI_Web.md  EP09_Performance_Observability_Resilience.md  EP10_Packaging_and_Release.md  EP11_InApp_Markdown_Editor.md  EP12_Autosave_and_Versioning_Engine.md  EP13_LLM_Assisted_Authoring.md  EP14_Auto_Indexing_Integration.md  EP15_Version_History_and_Rollback.md  EP16_Project_Aware_Document_Management.md  Epics_Index.md  Functional_Specification_AI_Native_Project_Documentation_Workspace.md  Proposal_Documentation_Creation.docx  Proposal_Documentation_Creation.md  Proposal_Project_Context.docx  Proposal_Project_Context.md  WBS_Personal_Knowledge_Retriever.md  brd_ai_native_personal_knowledge_retriever_mcp.md
doc/foundation/: CR_Index_Tab_Folder_Management.md  EP03_Read_and_Preview.md  EP05_Question_Answering_RAG.md  EP09_Performance_Observability_Resilience.md  Epics_Index.md  WBS_Personal_Knowledge_Retriever.md  brd_ai_native_personal_knowledge_retriever_mcp.md
public/: index.html  manifest.json
src/: App.tsx  index.css  types.ts
src/__tests__/: qa_default_and_versions.test.tsx
src/components/: DocumentViewerModal.tsx  IndexingInterface.tsx  ProjectsInterface.tsx  QnAInterface.tsx  SearchInterface.tsx  SettingsInterface.tsx  VersionHistoryInterface.tsx
src/components/App/: App.module.css  App.tsx
src/components/CitationPreview/: CitationPreview.module.css  CitationPreview.tsx
src/components/DocumentPreviewModal/: DocumentPreviewModal.module.css  DocumentPreviewModal.tsx
src/components/DocumentViewerModal/: DocumentViewerModal.module.css  DocumentViewerModal.tsx
src/components/EditorInterface/: EditorInterface.module.css  EditorInterface.tsx
src/components/IndexingInterface/: IndexingInterface.tsx  (+1 more)
src/contexts/: StatePersistenceContext.tsx  ThemeContext.tsx
src/styles/: base.css  components.css  tokens.css
(+18 files in other folders)
