[package]
name = "knowledge-base-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI specific
dialoguer = "0.11"
indicatif = "0.17"
